updated hftsimulation